Fix: Accidentaly encoding valid / in getPubChem query URLs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(.groupListByName)
 export(API)
 export(addAnnotationColumnToDrugs)
 export(getDrugBank)
+export(getInfoFromCellID)
 export(getPathways)
 export(getPubChem)
 export(getTargets)
@@ -22,3 +23,6 @@ importFrom(httr,GET)
 importFrom(httr,content)
 importFrom(jsonlite,fromJSON)
 importFrom(rlang,trace_back)
+importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_find_first)
+importFrom(xml2,xml_text)
