Add: getPubChemFromNSC and getPubChemCompoundFromCID functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(getDrugBank)
 export(getInfoFromCellID)
 export(getPathways)
 export(getPubChem)
+export(getPubChemCompoundFromCID)
+export(getPubChemFromNSC)
 export(getTargets)
 export(listColToDT)
 export(parseDrugBankXML)
