--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(.buildURL)
 export(.groupListByName)
 export(API)
 export(addAnnotationColumnToDrugs)
+export(getCellosaurus)
+export(getCelloxml)
 export(getDrugBank)
 export(getInfoFromCellID)
 export(getPathways)
@@ -19,12 +21,20 @@ export(queryUniProt)
 import(httr)
 import(jsonlite)
 import(xml2)
+importFrom(BiocParallel,bpmapply)
+importFrom(BiocParallel,bpparam)
+importFrom(CoreGx,.error)
 importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
+importFrom(CoreGx,.warning)
+importFrom(data.table,as.data.table)
+importFrom(data.table,data.table)
 importFrom(httr,GET)
 importFrom(httr,content)
+importFrom(httr,timeout)
 importFrom(jsonlite,fromJSON)
 importFrom(rlang,trace_back)
+importFrom(xml2,read_xml)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_text)
