Update: generalized queryPubChecm to support both batch and individual queries * Parallelized GET requests in queryPubChem; still some issues with httr:GET not respecting my settings for query timeouts * Issues with failing GET requests make the function unstable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,15 @@ export(getCelloxml)
 export(getDrugBank)
 export(getInfoFromCellID)
 export(getPathways)
-export(getPubChem)
 export(getPubChemCompoundFromCID)
 export(getPubChemFromNSC)
+export(getRequestPubChem)
 export(getTargets)
 export(listColToDT)
 export(parseDrugBankXML)
 export(parseJSON)
 export(queryPubChem)
+export(queryRequestPubChem)
 export(queryUniProt)
 import(httr)
 import(jsonlite)
@@ -30,6 +31,7 @@ importFrom(CoreGx,.warning)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(httr,GET)
+importFrom(httr,RETRY)
 importFrom(httr,content)
 importFrom(httr,timeout)
 importFrom(jsonlite,fromJSON)
