Update: Parallelized getPubChemFromNSC is now mostly working; the GET requests fail non-deterministically * Updates the getPubChemCompoundFromCID to be getPubChemCompound with a from='cid' arguement as the default * This will allow mapping setting from='sid' to get results for compounds without CIDs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(getCelloxml)
 export(getDrugBank)
 export(getInfoFromCellID)
 export(getPathways)
-export(getPubChemCompoundFromCID)
+export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getRequestPubChem)
 export(getTargets)
@@ -22,7 +22,10 @@ export(queryUniProt)
 import(httr)
 import(jsonlite)
 import(xml2)
+importFrom(BiocParallel,"bpprogressbar<-")
+importFrom(BiocParallel,"bpworkers<-")
 importFrom(BiocParallel,bpmapply)
+importFrom(BiocParallel,bpnworkers)
 importFrom(BiocParallel,bpparam)
 importFrom(CoreGx,.error)
 importFrom(CoreGx,.errorMsg)
