Add: .Rbuildignore stop building package with local data * Debugging some issues with 503 errors from PubChem API; seems like sometimes server load leads to non-deterministic request failures * Also added Heewons Python script for parsing the DrugBank XML file; made some progress on translating into R and improving

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Authors@R: c(
         email = "benjamin.haibe.kains@utoronto.ca"))
 Description: A package for building, updating and querying an
     annotation database for pharmaco-genomic data. Provides API interfaces
-    to various bioinformatic and cheminformatic databases, as well as a set
+    to various bioinformatic and chemoinformatic databases, as well as a set
     of functions for curating your data using the annotations retrieved from
     those APIs.
 Depends: R (>= 4.0)
