--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,10 @@ export(queryUniProt)
 import(httr)
 import(jsonlite)
 import(xml2)
+importFrom(BiocParallel,"bplog<-")
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,"bpworkers<-")
-importFrom(BiocParallel,bpmapply)
+importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpnworkers)
 importFrom(BiocParallel,bpparam)
 importFrom(CoreGx,.error)
@@ -38,6 +39,7 @@ importFrom(httr,RETRY)
 importFrom(httr,content)
 importFrom(httr,timeout)
 importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(rlang,trace_back)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_find_all)
