Fix: No longer retrying requests failed with 503 in getRequestPubChem * I got black listed from the API due to this; not sure how long the blacklist period is * This change should prevent the same from happening to other users

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(addAnnotationColumnToDrugs)
 export(getCellosaurus)
 export(getCelloxml)
 export(getDrugBank)
-export(getInfoFromCellID)
+export(getInfoFromCelllineInput)
 export(getPathways)
 export(getPubChemCompound)
 export(getPubChemFromNSC)
@@ -16,6 +16,7 @@ export(getTargets)
 export(listColToDT)
 export(parseDrugBankXML)
 export(parseJSON)
+export(queryCelloxml)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniProt)
@@ -42,6 +43,7 @@ importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(rlang,trace_back)
 importFrom(xml2,read_xml)
+importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_text)
