Fix: removed dependency on CoreGx * Was importing new message format utilities only availble in the R 4.1 version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,8 @@ Imports:
     jsonlite,
     data.table,
     rlang,
-    CoreGx
+    CoreGx,
+    crayon
 License: `use_mit_license()`
 Encoding: UTF-8
 LazyData: true
