Update: getDrugTargets function to extract targets table from DrugBank XML file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,14 @@ export(API)
 export(addAnnotationColumnToDrugs)
 export(getCellosaurus)
 export(getCelloxml)
-export(getDrugBank)
+export(getDrugTargets)
 export(getInfoFromCelllineInput)
-export(getPathways)
 export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getRequestPubChem)
-export(getTargets)
 export(listColToDT)
-export(parseDrugBankXML)
 export(parseJSON)
-export(queryCelloxml)
+export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniProt)
@@ -27,12 +24,16 @@ importFrom(BiocParallel,"bplog<-")
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,"bpworkers<-")
 importFrom(BiocParallel,bplapply)
+importFrom(BiocParallel,bpmapply)
 importFrom(BiocParallel,bpnworkers)
 importFrom(BiocParallel,bpparam)
+importFrom(BiocParallel,bpprogressbar)
 importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,merge.data.table)
+importFrom(data.table,rbindlist)
 importFrom(httr,GET)
 importFrom(httr,RETRY)
 importFrom(httr,content)
@@ -40,6 +41,7 @@ importFrom(httr,timeout)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(rlang,trace_back)
+importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_find_all)
