Fix: Refactored getDrugBank to remove R 4.1 special syntax; package is now backwards compatible again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getDrugTargets)
 export(getInfoFromCelllineInput)
 export(getPubChemCompound)
 export(getPubChemFromNSC)
+export(getPubChemSubstance)
 export(getRequestPubChem)
 export(listColToDT)
 export(parseJSON)
