Fix: getDrugTargets working correctly again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(.buildURL)
 export(.groupListByName)
 export(API)
 export(addAnnotationColumnToDrugs)
+export(characterToNamedList)
 export(getCellosaurus)
 export(getCelloxml)
 export(getDrugTargets)
 export(getInfoFromCelllineInput)
+export(getPubChemAnnotations)
 export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getPubChemSubstance)
@@ -31,6 +33,10 @@ importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,bpprogressbar)
 importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
+importFrom(crayon,blue)
+importFrom(crayon,bold)
+importFrom(crayon,cyan)
+importFrom(crayon,magenta)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
 importFrom(data.table,merge.data.table)
