Add: getPubChemAnnotations function * This function queries the PUG VIEW Annotatons API to fetch a specified annotation for all PubChem entries * Currently, result parsing is only implemented for the 'ATC Code' header * Users can supply their own result parser via the parseFUN argument, if they need data that is not implemented yet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(.buildURL)
 export(.groupListByName)
 export(API)
 export(addAnnotationColumnToDrugs)
-export(characterToNamedList)
+export(characterToNamedVector)
 export(getCellosaurus)
 export(getCelloxml)
 export(getDrugTargets)
@@ -39,6 +39,7 @@ importFrom(crayon,cyan)
 importFrom(crayon,magenta)
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,last)
 importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
 importFrom(httr,GET)
