Add: getPubChemAnnotations can now get all CID to NSC Number mappings without batch queries * For some reason this returns slightly less results than using getPubChemCompound, but is is faster and does less API queries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ importFrom(BiocParallel,bpmapply)
 importFrom(BiocParallel,bpnworkers)
 importFrom(BiocParallel,bpparam)
 importFrom(BiocParallel,bpprogressbar)
+importFrom(BiocParallel,bptry)
+importFrom(BiocParallel,bpworkers)
 importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
 importFrom(crayon,blue)
