--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Suggests:
     knitr,
     pandoc,
     BiocStyle
+VignetteBuilder: knitr
 License: `use_mit_license()`
 Encoding: UTF-8
 LazyData: true
