--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,last)
 importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
+importFrom(data.table,setnames)
 importFrom(httr,GET)
 importFrom(httr,RETRY)
 importFrom(httr,content)
