Add: getGuideToPharm function for querying Guide to PHARMACOLOGY API * That API didn't like parallelization, so for now the function excecutes in serial

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(characterToNamedVector)
 export(getCellosaurus)
 export(getCelloxml)
 export(getDrugTargets)
+export(getGuideToPharm)
 export(getInfoFromCelllineInput)
 export(getPubChemAnnotations)
 export(getPubChemCompound)
@@ -49,6 +50,7 @@ importFrom(data.table,setnames)
 importFrom(httr,GET)
 importFrom(httr,RETRY)
 importFrom(httr,content)
+importFrom(httr,status_code)
 importFrom(httr,timeout)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
