Add: getRequestPubChem now supports routing queries through random proxy server * This is very useful for cases where a user may get blacklisted

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(.groupListByName)
 export(API)
 export(addAnnotationColumnToDrugs)
 export(characterToNamedVector)
+export(cleanCellnames)
+export(failedAsDT)
 export(getCellosaurus)
 export(getCelloxml)
 export(getDrugTargets)
@@ -40,8 +42,11 @@ importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,cyan)
 importFrom(crayon,magenta)
+importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,fread)
+importFrom(data.table,fwrite)
 importFrom(data.table,last)
 importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
@@ -52,6 +57,7 @@ importFrom(httr,RETRY)
 importFrom(httr,content)
 importFrom(httr,status_code)
 importFrom(httr,timeout)
+importFrom(httr,use_proxy)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(rlang,trace_back)
