Add: Incomplete ProxyManager R6 class * Also added more helpers for parsing failure messages from getPubChem* * Improved query throttling

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,10 @@ Imports:
     rlang,
     CoreGx,
     crayon,
-    memoise
+    memoise,
+    R6,
+    R6P,
+    listenv
 Suggests:
     rmarkdown,
     knitr,
