--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,16 @@
 export(.buildURL)
 export(.groupListByName)
 export(API)
+export(ProxyManager)
 export(addAnnotationColumnToDrugs)
 export(characterToNamedVector)
 export(cleanCellnames)
-export(failedAsDT)
 export(getCellosaurus)
 export(getCelloxml)
 export(getDrugTargets)
+export(getFailed)
+export(getFailedIDs)
+export(getFailureMessages)
 export(getGuideToPharm)
 export(getInfoFromCelllineInput)
 export(getPubChemAnnotations)
@@ -19,10 +22,12 @@ export(getPubChemSubstance)
 export(getRequestPubChem)
 export(listColToDT)
 export(parseJSON)
+export(parse_text_response_to_datatable)
 export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniProt)
+import(R6)
 import(httr)
 import(jsonlite)
 import(xml2)
@@ -38,20 +43,21 @@ importFrom(BiocParallel,bptry)
 importFrom(BiocParallel,bpworkers)
 importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
+importFrom(R6P,Singleton)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,cyan)
 importFrom(crayon,magenta)
-importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
-importFrom(data.table,fwrite)
 importFrom(data.table,last)
 importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
+importFrom(data.table,tstrsplit)
 importFrom(httr,GET)
 importFrom(httr,RETRY)
 importFrom(httr,content)
@@ -60,6 +66,7 @@ importFrom(httr,timeout)
 importFrom(httr,use_proxy)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(listenv,listenv)
 importFrom(rlang,trace_back)
 importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
