--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,cyan)
 importFrom(crayon,magenta)
+importFrom(crayon,strip_style)
 importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
