--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,11 @@ export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getPubChemSubstance)
 export(getRequestPubChem)
+export(identifierToInchikey)
+export(inchiKeyToIdentifier)
+export(inchiToDatabaseID)
 export(listColToDT)
+export(mapBetweenSources)
 export(parseJSON)
 export(parse_text_response_to_datatable)
 export(queryCellosaurus)
