--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,12 @@ export(ProxyManager)
 export(addAnnotationColumnToDrugs)
 export(characterToNamedVector)
 export(cleanCellnames)
+export(downloadAndExtract)
+export(downloadFDAOrangeBook)
 export(getCellosaurus)
 export(getCelloxml)
 export(getDrugTargets)
+export(getFDAOrangeBookProducts)
 export(getFailed)
 export(getFailedIDs)
 export(getFailureMessages)
@@ -48,6 +51,8 @@ importFrom(BiocParallel,bpworkers)
 importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
 importFrom(R6P,Singleton)
+importFrom(checkmate,assertCharacter)
+importFrom(checkmate,assertFunction)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,cyan)
