Update: Zenodo entry creation code working; writing function to fill metadata fields

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,14 @@ export(ProxyManager)
 export(addAnnotationColumnToDrugs)
 export(characterToNamedVector)
 export(cleanCellnames)
+export(compoundQuery)
+export(constructChemblQuery)
 export(downloadAndExtract)
 export(downloadFDAOrangeBook)
 export(getCellosaurus)
+export(getCellosaurusDataFrame)
 export(getCelloxml)
+export(getChemblAllMechanisms)
 export(getDrugTargets)
 export(getFDAOrangeBookProducts)
 export(getFailed)
@@ -28,12 +32,16 @@ export(inchiKeyToIdentifier)
 export(inchiToDatabaseID)
 export(listColToDT)
 export(mapBetweenSources)
+export(moleculeQuery)
 export(parseJSON)
 export(parse_text_response_to_datatable)
 export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniProt)
+export(wIdentifierToInchiKey)
+export(wInchiToDatabaseID)
+export(wMapBetweenSources)
 import(R6)
 import(httr)
 import(jsonlite)
