Update: added messages and cleaned up documentation for depositZenodo function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(characterToNamedVector)
 export(cleanCellnames)
 export(compoundQuery)
 export(constructChemblQuery)
+export(depositZenodo)
 export(downloadAndExtract)
 export(downloadFDAOrangeBook)
 export(getCellosaurus)
@@ -42,7 +43,9 @@ export(queryUniProt)
 export(wIdentifierToInchiKey)
 export(wInchiToDatabaseID)
 export(wMapBetweenSources)
+export(zenodoMetadata)
 import(R6)
+import(checkmate)
 import(httr)
 import(jsonlite)
 import(xml2)
@@ -78,11 +81,16 @@ importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
 importFrom(data.table,tstrsplit)
 importFrom(httr,GET)
+importFrom(httr,POST)
+importFrom(httr,PUT)
 importFrom(httr,RETRY)
 importFrom(httr,content)
+importFrom(httr,progress)
 importFrom(httr,status_code)
 importFrom(httr,timeout)
+importFrom(httr,upload_file)
 importFrom(httr,use_proxy)
+importFrom(httr,warn_for_status)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(listenv,listenv)
