Added getBrainArrayDF function which scrapes the HTML table of all CDF files for microarrays * Added errors to getUniChem until I have time to debug it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(constructChemblQuery)
 export(depositZenodo)
 export(downloadAndExtract)
 export(downloadFDAOrangeBook)
+export(find_remote_files_recursive)
+export(getBrainArrayTable)
 export(getCellosaurus)
 export(getCellosaurusDataFrame)
 export(getCelloxml)
@@ -28,6 +30,9 @@ export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getPubChemSubstance)
 export(getRequestPubChem)
+export(get_remote_table)
+export(grep_directory_names)
+export(grep_file_names)
 export(identifierToInchikey)
 export(inchiKeyToIdentifier)
 export(inchiToDatabaseID)
@@ -64,6 +69,7 @@ importFrom(CoreGx,.warnMsg)
 importFrom(R6P,Singleton)
 importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertFunction)
+importFrom(checkmate,assert_character)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,cyan)
@@ -95,6 +101,9 @@ importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(listenv,listenv)
 importFrom(rlang,trace_back)
+importFrom(rvest,html_elements)
+importFrom(rvest,html_table)
+importFrom(rvest,read_html)
 importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_add_child)
