--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getPubChemSubstance)
 export(getRequestPubChem)
+export(getUniChemSources)
 export(get_remote_table)
 export(grep_directory_names)
 export(grep_file_names)
@@ -44,6 +45,9 @@ export(parse_text_response_to_datatable)
 export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
+export(queryUniChem)
+export(queryUniChemCompound)
+export(queryUniChemConnectivity)
 export(queryUniProt)
 export(wIdentifierToInchiKey)
 export(wInchiToDatabaseID)
@@ -91,13 +95,18 @@ importFrom(httr,POST)
 importFrom(httr,PUT)
 importFrom(httr,RETRY)
 importFrom(httr,content)
+importFrom(httr,headers)
+importFrom(httr,http_status)
 importFrom(httr,progress)
 importFrom(httr,status_code)
+importFrom(httr,stop_for_status)
 importFrom(httr,timeout)
 importFrom(httr,upload_file)
 importFrom(httr,use_proxy)
+importFrom(httr,verbose)
 importFrom(httr,warn_for_status)
 importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,parse_json)
 importFrom(jsonlite,toJSON)
 importFrom(listenv,listenv)
 importFrom(rlang,trace_back)
