First pass of UniChem compounds API queries working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,7 +46,7 @@ export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniChem)
-export(queryUniChemCompound)
+export(queryUniChemCompounds)
 export(queryUniChemConnectivity)
 export(queryUniProt)
 export(wIdentifierToInchiKey)
