Simplified UniChem API queries and added default parallelization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,23 +34,17 @@ export(getUniChemSources)
 export(get_remote_table)
 export(grep_directory_names)
 export(grep_file_names)
-export(identifierToInchikey)
-export(inchiKeyToIdentifier)
-export(inchiToDatabaseID)
+export(httpRequestUniChem)
 export(listColToDT)
-export(mapBetweenSources)
 export(moleculeQuery)
 export(parseJSON)
 export(parse_text_response_to_datatable)
+export(postRequestUniChem)
 export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniChem)
-export(queryUniChemCompounds)
 export(queryUniProt)
-export(wIdentifierToInchiKey)
-export(wInchiToDatabaseID)
-export(wMapBetweenSources)
 export(zenodoMetadata)
 import(R6)
 import(checkmate)
