Add function to scrape FTP tables from remotes; add function to scrape FTP table from Gencode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(constructChemblQuery)
 export(depositZenodo)
 export(downloadAndExtract)
 export(downloadFDAOrangeBook)
+export(find_remote_files_recursive)
 export(getCellosaurus)
 export(getCellosaurusDataFrame)
 export(getCelloxml)
@@ -21,6 +22,8 @@ export(getFDAOrangeBookProducts)
 export(getFailed)
 export(getFailedIDs)
 export(getFailureMessages)
+export(getGencodeFTPTable)
+export(getGencodeVersionFiles)
 export(getGuideToPharm)
 export(getInfoFromCelllineInput)
 export(getPubChemAnnotations)
@@ -28,6 +31,9 @@ export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getPubChemSubstance)
 export(getRequestPubChem)
+export(get_remote_table)
+export(grep_directory_names)
+export(grep_file_names)
 export(identifierToInchikey)
 export(inchiKeyToIdentifier)
 export(inchiToDatabaseID)
@@ -40,6 +46,7 @@ export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniProt)
+export(scrapeRemoteFTPFilesTable)
 export(wIdentifierToInchiKey)
 export(wInchiToDatabaseID)
 export(wMapBetweenSources)
@@ -64,6 +71,9 @@ importFrom(CoreGx,.warnMsg)
 importFrom(R6P,Singleton)
 importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertFunction)
+importFrom(checkmate,assertIntegerish)
+importFrom(checkmate,assert_character)
+importFrom(checkmate,assert_logical)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,cyan)
@@ -95,6 +105,9 @@ importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(listenv,listenv)
 importFrom(rlang,trace_back)
+importFrom(rvest,html_elements)
+importFrom(rvest,html_table)
+importFrom(rvest,read_html)
 importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_add_child)
