Regex for all Gencode GTF files added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,8 @@ export(getFailed)
 export(getFailedIDs)
 export(getFailureMessages)
 export(getGencodeFTPTable)
-export(getGencodeVersionFiles)
+export(getGencodeFile)
+export(getGencodeFilesTable)
 export(getGuideToPharm)
 export(getInfoFromCelllineInput)
 export(getPubChemAnnotations)
@@ -71,6 +72,7 @@ importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertFunction)
 importFrom(checkmate,assert_character)
 importFrom(checkmate,assert_logical)
+importFrom(checkmate,assert_subset)
 importFrom(crayon,blue)
 importFrom(crayon,bold)
 importFrom(crayon,cyan)
@@ -108,6 +110,7 @@ importFrom(jsonlite,parse_json)
 importFrom(jsonlite,toJSON)
 importFrom(listenv,listenv)
 importFrom(rlang,trace_back)
+importFrom(rtracklayer,import)
 importFrom(rvest,html_elements)
 importFrom(rvest,html_table)
 importFrom(rvest,read_html)
