--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AnnotationGx
 Title: AnnotationGx: A package for building, updating and querying an
     annotation database for pharmaco-genomic data.
-Version: 0.0.3
+Version: 0.0.4.9000
 Authors@R: c(
     person("Christopher", "Eeles", role = c("aut"),
         email = "christopher.eeles@uhnresearch.ca"),
@@ -21,6 +21,8 @@ Imports:
     httr,
     xml2,
     BiocParallel,
+    rtracklayer,
+    janitor,
     jsonlite,
     data.table,
     checkmate,
@@ -40,7 +42,7 @@ Suggests:
     kableExtra,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
-License: `use_mit_license()`
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
