Add user facing function to parse Gencode readme file to get names and descriptions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
     person("Sisira", "Nair", role = c("aut"),
         email="sisira.nair@uhnresearch.ca"),
     person("Petr", "Smirnov", role=c("aut")),
-    person("Shahzada", "Farooq", role=c("ctb")),
+    person("Shahzada", "Farooq", role=c("aut")),
     person("Benjamin", "Haibe-Kains", role=c("aut", "cre"),
         email = "benjamin.haibe.kains@utoronto.ca"))
 Description: A package for building, updating and querying an
