--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(getFDAOrangeBookProducts)
 export(getFailed)
 export(getFailedIDs)
 export(getFailureMessages)
+export(getGencodeAvailableFiles)
 export(getGencodeFTPTable)
 export(getGencodeFile)
 export(getGencodeFilesTable)
@@ -82,6 +83,7 @@ importFrom(data.table,"%ilike%")
 importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
 importFrom(data.table,data.table)
+importFrom(data.table,first)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,last)
