Downloading and loading Gencode FASTA files working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,8 @@ importFrom(BiocParallel,bpworkers)
 importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
 importFrom(R6P,Singleton)
+importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,metadata)
 importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertFunction)
 importFrom(checkmate,assert_character)
