Add Gencode version string interpolation and file type inference

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(get_remote_table)
 export(grep_directory_names)
 export(grep_file_names)
 export(httpRequestUniChem)
+export(infer_gencode_type)
 export(listColToDT)
 export(moleculeQuery)
 export(parseJSON)
