Add getGencodeGRangesAnnotated to retrieve a Gencode version with additional metadata added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(getGencodeAvailableFiles)
 export(getGencodeFTPTable)
 export(getGencodeFile)
 export(getGencodeFilesTable)
+export(getGencodeGRangesAnnotated)
 export(getGuideToPharm)
 export(getInfoFromCelllineInput)
 export(getPubChemAnnotations)
@@ -70,6 +71,7 @@ importFrom(CoreGx,.errorMsg)
 importFrom(CoreGx,.warnMsg)
 importFrom(R6P,Singleton)
 importFrom(S4Vectors,"metadata<-")
+importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertFunction)
