Add fsquash function to recursively flatten list columns in a data.frame/table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(depositZenodo)
 export(downloadAndExtract)
 export(downloadFDAOrangeBook)
 export(find_remote_files_recursive)
+export(fsquash)
 export(getBrainArrayTable)
 export(getCellosaurus)
 export(getCellosaurusDataFrame)
@@ -90,6 +91,7 @@ importFrom(data.table,data.table)
 importFrom(data.table,first)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
+importFrom(data.table,is.data.table)
 importFrom(data.table,last)
 importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
