--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(.buildURL)
 export(.groupListByName)
 export(API)
-export(ProxyManager)
 export(addAnnotationColumnToDrugs)
 export(characterToNamedVector)
 export(cleanCellnames)
@@ -37,6 +36,7 @@ export(getPubChemFromNSC)
 export(getPubChemSubstance)
 export(getRequestPubChem)
 export(getUniChemSources)
+export(get_remote_table)
 export(grep_directory_names)
 export(grep_file_names)
 export(httpRequestUniChem)
@@ -50,7 +50,6 @@ export(queryCellosaurus)
 export(queryPubChem)
 export(queryRequestPubChem)
 export(queryUniChem)
-export(queryUniProt)
 export(scrapeRemoteFTPFilesTable)
 export(zenodoMetadata)
 import(R6)
@@ -74,6 +73,9 @@ importFrom(R6P,Singleton)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
+importFrom(biomaRt,getBM)
+importFrom(biomaRt,listAttributes)
+importFrom(biomaRt,useEnsembl)
 importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertFunction)
 importFrom(checkmate,assert_character)
@@ -93,6 +95,7 @@ importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
 importFrom(data.table,last)
+importFrom(data.table,melt)
 importFrom(data.table,merge.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setcolorder)
