--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(.groupListByName)
 export(addAnnotationColumnToDrugs)
 export(characterToNamedVector)
 export(cleanCellnames)
+export(cleanCellosaurusResponse)
 export(compoundQuery)
 export(constructChemblQuery)
 export(depositZenodo)
@@ -13,6 +14,7 @@ export(downloadFDAOrangeBook)
 export(find_remote_files_recursive)
 export(fsquash)
 export(getBrainArrayTable)
+export(getCellApi)
 export(getCellosaurus)
 export(getCellosaurusDataFrame)
 export(getCelloxml)
