changed some documentation, added functions to cellosaurus

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,8 @@ export(downloadFDAOrangeBook)
 export(find_remote_files_recursive)
 export(fsquash)
 export(getBrainArrayTable)
-export(getCellApi)
 export(getCellosaurus)
+export(getCellosaurusAPI)
 export(getCellosaurusDataFrame)
 export(getCelloxml)
 export(getChemblAllMechanisms)
