--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(downloadAndExtract)
 export(downloadFDAOrangeBook)
 export(find_remote_files_recursive)
 export(fsquash)
+export(getAllPubChemAnnotations)
 export(getBrainArrayTable)
 export(getCellosaurus)
 export(getCellosaurusAPI)
@@ -32,7 +33,7 @@ export(getGencodeFilesTable)
 export(getGencodeGRangesAnnotated)
 export(getGuideToPharm)
 export(getInfoFromCelllineInput)
-export(getPubChemAnnotations)
+export(getPubChemAnnotation)
 export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getPubChemSubstance)
