add ChEMBL functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(getCellosaurusAPI)
 export(getCellosaurusDataFrame)
 export(getCelloxml)
 export(getChemblAllMechanisms)
+export(getChemblMechanism)
 export(getDrugTargets)
 export(getFDAOrangeBookProducts)
 export(getFailed)
