fix bugs in parseJSON, add multiCID functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(getGencodeGRangesAnnotated)
 export(getGuideToPharm)
 export(getInfoFromCelllineInput)
 export(getPubChemAnnotation)
+export(getPubChemAnnotations)
 export(getPubChemCompound)
 export(getPubChemFromNSC)
 export(getPubChemSubstance)
