update documentations, and gha

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(getPubChemAnnotation)
 export(getPubChemAnnotations)
 export(getPubChemCompound)
 export(getPubChemFromNSC)
+export(getPubChemStatus)
 export(getPubChemSubstance)
 export(getRequestPubChem)
 export(getUniChemSources)
