--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -41,9 +41,10 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
-          needs: check
+          extra-packages: rcmdcheck
+          # needs: check
 
       - uses: r-lib/actions/check-r-package@v2
         with:
+          error-on: '"error"'
           upload-snapshots: true
