remove failing package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,8 +37,7 @@ Imports:
     R6P,
     listenv,
     rvest,
-    S4Vectors,
-    Cellosaurus
+    S4Vectors
 Suggests:
     rmarkdown,
     knitr,
@@ -46,7 +45,6 @@ Suggests:
     DT,
     kableExtra,
     testthat (>= 3.0.0)
-Additional_repositories: https://r.acidgenomics.com
 VignetteBuilder: knitr
 License: GPL (>= 3)
 Encoding: UTF-8
