--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(.buildURL)
 export(.groupListByName)
+export(.parseCellosaurusTSVResponse)
+export(.parseDILIresponse)
 export(addAnnotationColumnToDrugs)
 export(characterToNamedVector)
 export(cleanCellnames)
@@ -55,9 +57,7 @@ export(queryUniChem)
 export(scrapeRemoteFTPFilesTable)
 export(searchCellosaurusAPI)
 export(zenodoMetadata)
-import(BiocParallel)
 import(checkmate)
-import(data.table)
 importFrom(BiocParallel,"bplog<-")
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,"bpworkers<-")
@@ -124,4 +124,5 @@ importFrom(xml2,read_xml)
 importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_find_first)
+importFrom(xml2,xml_set_attr)
 importFrom(xml2,xml_text)
