Add mapCellosaursAccessionsToFields function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(grep_file_names)
 export(httpRequestUniChem)
 export(infer_gencode_type)
 export(listColToDT)
+export(mapCellosaursAccessionsToFields)
 export(moleculeQuery)
 export(parseJSON)
 export(postRequestUniChem)
