--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
-    BiocParallel,
     checkmate,
     crayon,
-    httr2
+    httr2,
+    data.table
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
