Update DESCRIPTION and NAMESPACE files, remove unused function, and modify log level in log_utils.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     checkmate,
     crayon,
     httr2,
-    data.table
+    data.table,
+    options
 Suggests: 
     testthat (>= 3.0.0),
     covr
