Update package version and dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ importFrom(checkmate,assert_atomic)
 importFrom(checkmate,assert_choice)
 importFrom(checkmate,assert_logical)
 importFrom(checkmate,test_choice)
+importFrom(data.table,":=")
