Add mapCell2Accession function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getChemblMechanism)
 export(getChemblResourceFields)
 export(getPubchemAnnotationHeadings)
 export(getPubchemCompound)
+export(mapCell2Accession)
 export(standardize_names)
 importFrom(checkmate,assert)
 importFrom(checkmate,assert_atomic)
