--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,10 @@ Suggests:
     testthat (>= 3.0.0),
     covr,
     readr,
-    tibble
+    tibble,
+    readxl
 Config/testthat/edition: 3
 License: GPL (>= 3) + file LICENSE
+Depends: 
+    R (>= 2.10)
+LazyData: true
