--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -53,7 +53,7 @@ jobs:
     # TAG=$(grep  'Version:' DESCRIPTION  | grep -oE '[0-9]+(\.[0-9]+)*')
     # and then runs the docker build and push commands
     runs-on: ubuntu-latest
-    needs: R-CMD-check
+    # needs: R-CMD-check
     steps:
       - uses: actions/checkout@v2
 
