--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -9,44 +9,44 @@ on:
 name: R-CMD-check
 
 jobs:
-  R-CMD-check:
-    runs-on: ${{ matrix.config.os }}
+  # R-CMD-check:
+  #   runs-on: ${{ matrix.config.os }}
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }})
+  #   name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
-    strategy:
-      fail-fast: false
-      matrix:
-        config:
-          - {os: macos-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-latest,   r: 'release'}
-          - {os: ubuntu-latest,   r: 'oldrel-1'}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       config:
+  #         - {os: macos-latest,   r: 'release'}
+  #         - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
+  #         - {os: ubuntu-latest,   r: 'release'}
+  #         - {os: ubuntu-latest,   r: 'oldrel-1'}
 
 
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
+  #   env:
+  #     GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+  #     R_KEEP_PKG_SOURCE: yes
 
-    steps:
-      - uses: actions/checkout@v4
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - uses: r-lib/actions/setup-pandoc@v2
+  #     - uses: r-lib/actions/setup-pandoc@v2
 
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
-          use-public-rspm: true
+  #     - uses: r-lib/actions/setup-r@v2
+  #       with:
+  #         r-version: ${{ matrix.config.r }}
+  #         http-user-agent: ${{ matrix.config.http-user-agent }}
+  #         use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::rcmdcheck
-          needs: check
+  #     - uses: r-lib/actions/setup-r-dependencies@v2
+  #       with:
+  #         extra-packages: any::rcmdcheck
+  #         needs: check
 
-      - uses: r-lib/actions/check-r-package@v2
-        with:
-          upload-snapshots: true
+  #     - uses: r-lib/actions/check-r-package@v2
+  #       with:
+  #         upload-snapshots: true
 
   Upload-Docker:
     # copies the entire repo to the runner, runs the command
@@ -96,7 +96,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           file: ./Dockerfile
           push: true
           tags: |
