--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -66,7 +66,6 @@ jobs:
           echo "TAG=$TAG" >> $GITHUB_ENV
 
       - name: Set up QEMU
-        if: steps.release.outputs.released == 'true'
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
@@ -96,7 +95,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
           push: true
           tags: |
