Update package version and add BiocParallel dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getPubchemAnnotationHeadings)
 export(getPubchemCompound)
 export(mapCell2Accession)
 export(standardize_names)
+import(BiocParallel)
 importFrom(checkmate,assert)
 importFrom(checkmate,assert_atomic)
 importFrom(checkmate,assert_choice)
