--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AnnotationGx
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9054
+Version: 0.0.0.9055
 Authors@R: 
     person("Jermiah", "Joseph", , "jermiah.joseph@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
@@ -12,7 +12,8 @@ Imports:
     crayon,
     httr2,
     data.table,
-    options
+    options,
+    BiocParallel
 Suggests: 
     testthat (>= 3.0.0),
     covr,
