Update package version and add dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AnnotationGx
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9055
+Version: 0.0.0.9056
 Authors@R: 
     person("Jermiah", "Joseph", , "jermiah.joseph@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
@@ -14,11 +14,11 @@ Imports:
     data.table,
     options,
     BiocParallel
+    readr,
+    tibble
 Suggests: 
     testthat (>= 3.0.0),
     covr,
-    readr,
-    tibble,
     readxl
 Config/testthat/edition: 3
 License: GPL (>= 3) + file LICENSE
