--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AnnotationGx
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9056
+Version: 0.0.0.9057
 Authors@R: 
     person("Jermiah", "Joseph", , "jermiah.joseph@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
@@ -13,7 +13,7 @@ Imports:
     httr2,
     data.table,
     options,
-    BiocParallel
+    BiocParallel,
     readr,
     tibble
 Suggests: 
