--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AnnotationGx
 Title: AnnotationGx: A package for building, updating and querying an
     annotation database for pharmaco-genomic data
-Version: 0.0.5.9100
+Version: 0.0.5.9101
 Authors@R: c(
     person("Christopher", "Eeles", role = c("aut"),
         email = "christopher.eeles@uhnresearch.ca"),
@@ -35,13 +35,15 @@ Imports:
     S4Vectors,
     crayon,
     stringr,
-    BiocStyle
+    BiocStyle,
+    Cellosaurus
 Suggests:
     rmarkdown,
     knitr,
     DT,
     kableExtra,
     testthat (>= 3.0.0)
+Additional_repositories: https://r.acidgenomics.com
 VignetteBuilder: knitr
 License: GPL (>= 3)
 Encoding: UTF-8
