--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -2,9 +2,9 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: [main, newAnnotationGx]
   pull_request:
-    branches: [main, master]
+    branches: [main, newAnnotationGx]
 
 name: R-CMD-check
 
@@ -49,7 +49,7 @@ jobs:
           upload-snapshots: true
 
   Upload-Docker:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/newAnnotationGx'
     needs: R-CMD-check
     runs-on: ubuntu-latest
     steps:
