--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -72,8 +72,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.BHKLAB_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.BHKLAB_DOCKERHUB_ACCESS_KEY }}
 
       - name: Login to the GitHub Container Registry
         uses: docker/login-action@v3
@@ -87,7 +87,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/annotationgx-r:${{ env.TAG }}
+            ${{ secrets.BHKLAB_DOCKERHUB_USERNAME }}/annotationgx-r:${{ env.TAG }}
 
       - name: Build
         uses: docker/build-push-action@v5
@@ -97,4 +97,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/annotationgx-r:${{ env.TAG }}
+            ${{ secrets.BHKLAB_DOCKERHUB_USERNAME }}/annotationgx-r:${{ env.TAG }}
