--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,4 +28,4 @@ Depends:
     R (>= 2.10)
 LazyData: true
 VignetteBuilder: knitr
-URL: https://jjjermiah.github.io/AnnotationGx/
+URL: https://bhklab.github.io/AnnotationGx/
